# md5

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
benches/: lib.rs
examples/: md5sum.rs
src/: lib.rs  main.rs
